--- a/projects/sample-project/index.html
+++ b/projects/sample-project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         /* Project page specific styles */
         .project-hero {
@@ -250,12 +250,12 @@
         <div class="nav-container">
             <a href="../../" class="nav-logo">Portfolio</a>
             <ul class="nav-menu">
-                <li><a href="../../#home" class="nav-link">Home</a></li>
-                <li><a href="../../#about" class="nav-link">About</a></li>
-                <li><a href="../../#experience" class="nav-link">Experience</a></li>
-                <li><a href="../../#education" class="nav-link">Education</a></li>
-                <li><a href="../" class="nav-link">Projects</a></li>
-                <li><a href="../../#contact" class="nav-link">Contact</a></li>
+                <li><a href="../../index.html#home" class="nav-link">Inicio</a></li>
+                <li><a href="../../index.html#about" class="nav-link">Sobre mí</a></li>
+                <li><a href="../../index.html#experience" class="nav-link">Experiencia</a></li>
+                <li><a href="../../index.html#education" class="nav-link">Formación</a></li>
+                <li><a href="../" class="nav-link">Proyectos</a></li>
+                <li><a href="../../index.html#contact" class="nav-link">Contacto</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
