--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UX Designer Portfolio</title>
+    <title>Bárbara M - Diseñadora UX/UI Portfolio</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="nav-logo">Portfolio</a>
             <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#experience" class="nav-link">Experience</a></li>
-                <li><a href="#education" class="nav-link">Education</a></li>
-                <li><a href="projects/index.html" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="#home" class="nav-link">Inicio</a></li>
+                <li><a href="#about" class="nav-link">Sobre mí</a></li>
+                <li><a href="#experience" class="nav-link">Experiencia</a></li>
+                <li><a href="#education" class="nav-link">Formación</a></li>
+                <li><a href="projects/index.html" class="nav-link">Proyectos</a></li>
+                <li><a href="#contact" class="nav-link">Contacto</a></li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -34,8 +34,8 @@
             <div class="hero-container">
                 <div class="hero-content">
                     <h1 class="hero-title">
-                        <span class="hero-greeting">Hi, I'm</span>
-                        <span class="hero-name" id="designer-name">Jane Doe</span>
+                        <span class="hero-greeting">¡Hola! me llamo</span>
+                        <span class="hero-name" id="designer-name">Bárbara M</span>
                     </h1>
                     <p class="hero-subtitle" id="designer-role">UX Designer crafting meaningful digital experiences</p>
                     <p class="hero-description" id="designer-description">
@@ -43,19 +43,19 @@
                         and deliver exceptional digital experiences.
                     </p>
                     <div class="hero-actions">
-                        <a href="projects/index.html" class="btn btn-primary">View My Work</a>
-                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                        <a href="projects/index.html" class="btn btn-primary">Ver mi trabajo</a>
+                        <a href="#contact" class="btn btn-secondary">Contactar</a>
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/images/profile.svg" alt="Designer Profile" id="profile-image">
+                    <img src="assets/images/profile.jpeg" alt="Bárbara M Profile Photo" id="profile-image">
                 </div>
             </div>
         </section>
 
         <section id="about" class="about">
             <div class="container">
-                <h2 class="section-title">About Me</h2>
+                <h2 class="section-title">Sobre mí</h2>
                 <div class="about-content">
                     <div class="about-text">
                         <p id="about-description">
@@ -64,24 +64,31 @@
                             user research and data-driven design decisions.
                         </p>
                         <div class="skills">
-                            <h3>Skills & Tools</h3>
+                            <h3>Habilidades y herramientas</h3>
                             <div class="skills-grid" id="skills-container">
                                 <!-- Skills will be loaded dynamically -->
+                            </div>
+                        </div>
+                        
+                        <div class="languages">
+                            <h3>Idiomas</h3>
+                            <div class="languages-grid" id="languages-container">
+                                <!-- Languages will be loaded dynamically -->
                             </div>
                         </div>
                     </div>
                     <div class="about-stats">
                         <div class="stat">
-                            <span class="stat-number" id="years-experience">5+</span>
-                            <span class="stat-label">Years Experience</span>
+                            <span class="stat-number" id="years-experience">3+</span>
+                            <span class="stat-label">Años de experiencia</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number" id="projects-completed">50+</span>
-                            <span class="stat-label">Projects Completed</span>
+                            <span class="stat-number" id="projects-completed">100+</span>
+                            <span class="stat-label">Usuarios acompañados</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number" id="happy-clients">25+</span>
-                            <span class="stat-label">Happy Clients</span>
+                            <span class="stat-number" id="happy-clients">250+</span>
+                            <span class="stat-label">Casos gestionados</span>
                         </div>
                     </div>
                 </div>
@@ -90,7 +97,7 @@
 
         <section id="experience" class="experience">
             <div class="container">
-                <h2 class="section-title">Professional Experience</h2>
+                <h2 class="section-title">Experiencia Profesional</h2>
                 <div class="timeline" id="experience-timeline">
                     <!-- Experience items will be loaded dynamically -->
                 </div>
@@ -99,7 +106,7 @@
 
         <section id="education" class="education">
             <div class="container">
-                <h2 class="section-title">Education</h2>
+                <h2 class="section-title">Formación</h2>
                 <div class="timeline" id="education-timeline">
                     <!-- Education items will be loaded dynamically -->
                 </div>
@@ -108,21 +115,38 @@
 
         <section id="featured-projects" class="featured-projects">
             <div class="container">
-                <h2 class="section-title">Featured Projects</h2>
-                <p class="section-subtitle">A selection of my recent work</p>
-                <div class="projects-grid" id="featured-projects-grid">
-                    <!-- Featured projects will be loaded dynamically -->
+                <h2 class="section-title">Proyectos Destacados</h2>
+                <p class="section-subtitle">Una selección de mi trabajo reciente</p>
+                <div class="projects-carousel" id="featured-projects-carousel">
+                    <div class="carousel-container">
+                        <div class="carousel-track" id="carousel-track">
+                            <!-- Featured projects will be loaded dynamically -->
+                        </div>
+                    </div>
+                    <button class="carousel-nav prev" id="carousel-prev">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 18L9 12L15 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                    <button class="carousel-nav next" id="carousel-next">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </button>
+                    <div class="carousel-indicators" id="carousel-indicators">
+                        <!-- Indicators will be generated dynamically -->
+                    </div>
                 </div>
                 <div class="section-actions">
-                    <a href="projects/index.html" class="btn btn-primary">View All Projects</a>
+                    <a href="projects/index.html" class="btn btn-primary">Ver todos los proyectos</a>
                 </div>
             </div>
         </section>
 
         <section id="contact" class="contact">
             <div class="container">
-                <h2 class="section-title">Let's Work Together</h2>
-                <p class="section-subtitle">I'm always interested in new opportunities and collaborations</p>
+                <h2 class="section-title">Trabajemos juntos</h2>
+                <p class="section-subtitle">Siempre estoy interesada en nuevas oportunidades y colaboraciones</p>
                 <div class="contact-content">
                     <div class="contact-info">
                         <div class="contact-item">
@@ -134,8 +158,8 @@
                             <a href="#" target="_blank" id="contact-linkedin">linkedin.com/in/designer</a>
                         </div>
                         <div class="contact-item">
-                            <h3>Location</h3>
-                            <span id="contact-location">San Francisco, CA</span>
+                            <h3>Ubicación</h3>
+                            <span id="contact-location">España</span>
                         </div>
                     </div>
                 </div>
@@ -145,7 +169,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 <span id="footer-name">Jane Doe</span>. All rights reserved.</p>
+            <p>&copy; 2024 <span id="footer-name">Bárbara M</span>. Todos los derechos reservados.</p>
         </div>
     </footer>
 
