--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <main id="main">
         <section id="home" class="hero">
-            <div class="hero-container">
+            <div class="container">
+                <div class="hero-container">
                 <div class="hero-content">
                     <h1 class="hero-title">
                         <span class="hero-greeting">¡Hola! me llamo</span>
@@ -47,6 +48,7 @@
                 </div>
                 <div class="hero-image">
                     <img src="assets/images/new_profile.png" alt="Bárbara M Profile Photo" id="profile-image">
+                </div>
                 </div>
             </div>
         </section>
@@ -75,19 +77,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="about-stats">
-                        <div class="stat">
-                            <span class="stat-number" id="years-experience">3+</span>
-                            <span class="stat-label">Años de experiencia</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number" id="projects-completed">100+</span>
-                            <span class="stat-label">Usuarios acompañados</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-number" id="happy-clients">250+</span>
-                            <span class="stat-label">Casos gestionados</span>
-                        </div>
+                    <div class="about-spacer">
+                        <!-- Empty right side to match hero text width -->
                     </div>
                 </div>
             </div>
@@ -120,6 +111,25 @@
                 </div>
                 <div class="section-actions">
                     <a href="projects/index.html" class="btn btn-primary">Ver todos los proyectos</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="stats" class="stats-section">
+            <div class="container">
+                <div class="about-stats">
+                    <div class="stat">
+                        <span class="stat-number" id="years-experience">3+</span>
+                        <span class="stat-label">Años de experiencia</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number" id="projects-completed">100+</span>
+                        <span class="stat-label">Usuarios acompañados</span>
+                    </div>
+                    <div class="stat">
+                        <span class="stat-number" id="happy-clients">250+</span>
+                        <span class="stat-label">Casos gestionados</span>
+                    </div>
                 </div>
             </div>
         </section>
