--- a/projects/sample-project/index.html
+++ b/projects/sample-project/index.html
@@ -73,8 +73,8 @@
             width: 50px;
             height: 50px;
             background: var(--white);
-            border: 2px solid var(--primary-color);
-            color: var(--primary-color);
+            border: 2px solid var(--brand);
+            color: var(--brand);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -85,7 +85,7 @@
         }
         
         .nav-btn:hover {
-            background: var(--primary-color);
+            background: var(--brand);
             color: var(--white);
             transform: scale(1.1);
         }
@@ -150,7 +150,7 @@
             justify-content: center;
             width: 60px;
             height: 60px;
-            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
+            background: linear-gradient(135deg, var(--brand), var(--accent-color));
             color: var(--white);
             border-radius: 50%;
             font-size: var(--text-xl);
@@ -195,7 +195,7 @@
             display: block;
             font-size: var(--text-4xl);
             font-weight: 700;
-            color: var(--primary-color);
+            color: var(--brand);
             font-family: var(--font-display);
             margin-bottom: var(--space-2);
         }
