--- a/index.html
+++ b/index.html
@@ -33,44 +33,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
+    <a href="#main" class="skip-to-content">Saltar al contenido principal</a>
+    <header role="banner">
+        <nav class="navbar" role="navigation" aria-label="Navegación principal">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">Portfolio</a>
-            <ul class="nav-menu">
-                <li><a href="#home" class="nav-link">Inicio</a></li>
-                <li><a href="#about" class="nav-link">Sobre mí</a></li>
-                <li><a href="#experience" class="nav-link">Experiencia</a></li>
-                <li><a href="#education" class="nav-link">Formación</a></li>
-                <li><a href="projects/index.html" class="nav-link">Proyectos</a></li>
-                <li><a href="#contact" class="nav-link">Contacto</a></li>
+            <a href="#home" class="nav-logo" aria-label="Ir al inicio del portfolio">Portfolio</a>
+            <ul class="nav-menu" role="menubar" aria-label="Menú de navegación">
+                <li role="none"><a href="#home" class="nav-link" role="menuitem">Inicio</a></li>
+                <li role="none"><a href="#about" class="nav-link" role="menuitem">Sobre mí</a></li>
+                <li role="none"><a href="#experience" class="nav-link" role="menuitem">Experiencia</a></li>
+                <li role="none"><a href="#education" class="nav-link" role="menuitem">Formación</a></li>
+                <li role="none"><a href="projects/index.html" class="nav-link" role="menuitem">Proyectos</a></li>
+                <li role="none"><a href="#contact" class="nav-link" role="menuitem">Contacto</a></li>
             </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+            <button class="hamburger" aria-label="Abrir menú de navegación" aria-expanded="false" aria-controls="nav-menu" type="button">
+                <span class="bar" aria-hidden="true"></span>
+                <span class="bar" aria-hidden="true"></span>
+                <span class="bar" aria-hidden="true"></span>
+            </button>
         </div>
         </nav>
     </header>
 
-    <main id="main">
-        <section id="home" class="hero">
+    <main id="main" role="main">
+        <section id="home" class="hero" role="banner" aria-labelledby="hero-title">
             <div class="container">
                 <div class="hero-container">
                 <div class="hero-content">
-                    <h1 class="hero-title">
+                    <h1 class="hero-title" id="hero-title">
                         <span class="hero-greeting">¡Hola! me llamo</span>
                         <span class="hero-name" id="designer-name">Bárbara M</span>
                     </h1>
-                    <p class="hero-subtitle" id="designer-role">UX Designer crafting meaningful digital experiences</p>
-                    <p class="hero-description" id="designer-description">
+                    <p class="hero-subtitle" id="designer-role" role="text">UX Designer crafting meaningful digital experiences</p>
+                    <p class="hero-description" id="designer-description" role="text">
                         I specialize in creating user-centered designs that solve complex problems 
                         and deliver exceptional digital experiences.
                     </p>
                 </div>
-                <div class="hero-image">
-                    <img src="assets/images/new_profile.png" alt="Bárbara M Profile Photo" id="profile-image" class="portrait" loading="eager">
+                <div class="hero-image" role="img" aria-labelledby="profile-alt">
+                    <img src="assets/images/new_profile.png" alt="Foto de perfil profesional de Bárbara M, diseñadora UX/UI" id="profile-image" class="portrait" loading="eager">
+                    <span id="profile-alt" class="visually-hidden">Fotografía profesional de Bárbara M en su espacio de trabajo</span>
                 </div>
                 </div>
             </div>
