--- a/projects/project.html
+++ b/projects/project.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project - Portfolio</title>
-    <link rel="stylesheet" href="../assets/css/styles.css?v=mustard5">
-    <link rel="stylesheet" href="../assets/css/project.css?v=mustard5">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
+    <a href="#main" class="skip-to-content">Skip to main content</a>
+    <header role="banner">
+        <nav class="navbar" role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="../" class="nav-logo">Portfolio</a>
-                <ul class="nav-menu">
-                    <li><a href="../index.html#home" class="nav-link">Home</a></li>
-                    <li><a href="../index.html#about" class="nav-link">About</a></li>
-                    <li><a href="../index.html#experience" class="nav-link">Experience</a></li>
-                    <li><a href="../index.html#education" class="nav-link">Education</a></li>
-                    <li><a href="../projects/" class="nav-link">Projects</a></li>
-                    <li><a href="../index.html#contact" class="nav-link">Contact</a></li>
+                <a href="../" class="nav-logo" aria-label="Go to portfolio home">Portfolio</a>
+                <ul class="nav-menu" role="menubar" aria-label="Navigation menu">
+                    <li role="none"><a href="../index.html#home" class="nav-link" role="menuitem">Home</a></li>
+                    <li role="none"><a href="../index.html#about" class="nav-link" role="menuitem">About</a></li>
+                    <li role="none"><a href="../index.html#experience" class="nav-link" role="menuitem">Experience</a></li>
+                    <li role="none"><a href="../index.html#education" class="nav-link" role="menuitem">Education</a></li>
+                    <li role="none"><a href="../projects/" class="nav-link" role="menuitem" aria-current="page">Projects</a></li>
+                    <li role="none"><a href="../index.html#contact" class="nav-link" role="menuitem">Contact</a></li>
                 </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
+                <button class="hamburger" aria-label="Open navigation menu" aria-expanded="false" aria-controls="nav-menu" type="button">
+                    <span class="bar" aria-hidden="true"></span>
+                    <span class="bar" aria-hidden="true"></span>
+                    <span class="bar" aria-hidden="true"></span>
+                </button>
             </div>
         </nav>
     </header>
